--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- This is Squarespace. --><!-- megan-bingham-mjmf -->
 <link charset="utf-8" rel="stylesheet" id="yui_3_17_2_1_1619654612203_436" href="//assets.squarespace.com/universal/styles-compressed/pinterest-3d55c64c25996c7633fc2-min.en-US.css"><script charset="utf-8" id="yui_3_17_2_1_1619654612203_435" src="//assets.squarespace.com/universal/scripts-compressed/pinterest-e302f36b8d7ccb4384f0b-min.en-US.js"></script><base href="">
 <meta charset="utf-8">
-<title>OffWhite Makeup and Beauty</title>
+<title>GeetArtistry</title>
 <link rel="shortcut icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1447361424439-TYT2ZR6TRND91R75UV4E/ke17ZwdGBToddI8pDm48kODEHMGUBRgRRplOmqRomK1Zw-zPPgdn4jUwVcJE1ZvWhcwhEtWJXoshNdA9f1qD7Xj1nVWs2aaTtWBneO2WM-vKKmLGZcam4wNLVFkW8ocU3wCuzBZdxfWEqO227KYmPQ/favicon.ico?format=100w">
 <link rel="canonical" href="https://anoffwhiteseattle.com">
 <meta property="og:site_name" content="OffWhite Makeup and Beauty">
@@ -195,7 +195,7 @@ a.PIN_1619654612664_embed_grid_ft span.PIN_1619654612664_embed_grid_ft_logo { ve
 				<div id="headerInfo">
 					
 					<h1 class="logo image" data-shrink-original-size="21">
-						<a href="/" title="OffWhite Makeup and Beauty" role="bookmark" data-content-field="site-title">
+						<a href="/" title="GeetArtistry" role="bookmark" data-content-field="site-title">
 						  <span class="placed-logo-image"><img src="//static1.squarespace.com/static/54829d8ee4b05054300c9003/t/5644fa03e4b03240a8efdc80/1600924279180/?format=1500w" alt="OffWhite Makeup and Beauty"></span>
 						  
 						</a>
