--- a/index.html
+++ b/index.html
@@ -1583,11 +1583,11 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 			  " style="overflow: hidden;">
 
 															<noscript><img
-																	src="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1455841869404-QAWELEYTDOMPYTHZZXYM/ke17ZwdGBToddI8pDm48kLrhWKKWjNDOYoaDLMOF_WhZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVH2kOlRZOtwrHu4ML1jQV7QQkJwdqdVbnF_esRG1Dtz3TNeJ2VKNLVa9LioXbAKM7Q/Wedding_0126.JPG"
+																	src="https://www.instagram.com/p/CO7WDstMmmh/"
 																	alt=" OffWhite Makeup &amp;amp; Beauty | www.offwhitebeauty.com | Bryce Covey Photography | Seattle Bride | Seattle Makeup Artist | Airbrush Makeup | Wedding Hair | Pacific Northwest Bride  " /></noscript><img
 																class="thumb-image loaded"
-																data-src="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1455841869404-QAWELEYTDOMPYTHZZXYM/ke17ZwdGBToddI8pDm48kLrhWKKWjNDOYoaDLMOF_WhZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVH2kOlRZOtwrHu4ML1jQV7QQkJwdqdVbnF_esRG1Dtz3TNeJ2VKNLVa9LioXbAKM7Q/Wedding_0126.JPG"
-																data-image="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1455841869404-QAWELEYTDOMPYTHZZXYM/ke17ZwdGBToddI8pDm48kLrhWKKWjNDOYoaDLMOF_WhZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVH2kOlRZOtwrHu4ML1jQV7QQkJwdqdVbnF_esRG1Dtz3TNeJ2VKNLVa9LioXbAKM7Q/Wedding_0126.JPG"
+																data-src="https://www.instagram.com/p/CO7WDstMmmh/"
+																data-image="https://www.instagram.com/p/CO7WDstMmmh/"
 																data-image-dimensions="469x640"
 																data-image-focal-point="0.5,0.5" data-load="false"
 																data-image-id="56c6624c746fb96978565487"
@@ -1596,27 +1596,12 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 																data-parent-ratio="0.7"
 																alt=" OffWhite Makeup &amp;amp; Beauty | www.offwhitebeauty.com | Bryce Covey Photography | Seattle Bride | Seattle Makeup Artist | Airbrush Makeup | Wedding Hair | Pacific Northwest Bride  "
 																data-image-resolution="750w"
-																src="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1455841869404-QAWELEYTDOMPYTHZZXYM/ke17ZwdGBToddI8pDm48kLrhWKKWjNDOYoaDLMOF_WhZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVH2kOlRZOtwrHu4ML1jQV7QQkJwdqdVbnF_esRG1Dtz3TNeJ2VKNLVa9LioXbAKM7Q/Wedding_0126.JPG?format=750w">
+																src="https://www.instagram.com/p/CO7WDstMmmh/">
 														</a>
-
 													</div>
 												</div>
-
-
-
-
-
-
-
 											</div>
-
-
-
 										</div>
-
-
-
-
 										<style type="text/css" id="design-grid-css">
 											#block-yui_3_17_2_46_1447356062719_9129 .sqs-gallery-block-grid .sqs-gallery-design-grid {
 												margin-right: -15px;
@@ -1627,15 +1612,6 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 												margin-bottom: 15px;
 											}
 										</style>
-
-
-
-									</div>
-								</div>
-								<div class="sqs-block horizontalrule-block sqs-block-horizontalrule"
-									data-block-type="47" id="block-yui_3_17_2_114_1418870559081_12784">
-									<div class="sqs-block-content">
-										<hr>
 									</div>
 								</div>
 								<div class="sqs-block html-block sqs-block-html" data-block-type="2"
