dimple bride pic

--- a/index.html
+++ b/index.html
@@ -1559,29 +1559,13 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 
 													</div>
 												</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+											<!--dimple bride -->
 												<div class="slide sqs-gallery-design-grid-slide" data-type="image"
 													data-animation-role="image" id="yui_3_17_2_1_1619654612203_137">
 													<div class="margin-wrapper">
-
 														<a role="presentation" class="
-				image-slide-anchor
-				
-				content-fill
-			  " style="overflow: hidden;">
-
+															image-slide-anchor
+															content-fill" style="overflow: hidden;">
 															<noscript><img
 																	src="https://www.instagram.com/p/CO7WDstMmmh/"
 																	alt=" OffWhite Makeup &amp;amp; Beauty | www.offwhitebeauty.com | Bryce Covey Photography | Seattle Bride | Seattle Makeup Artist | Airbrush Makeup | Wedding Hair | Pacific Northwest Bride  " /></noscript><img
@@ -1644,8 +1628,8 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 							</div>
 						</a>
 
-						<a href="https://www.facebook.com/makeupStarStudio"
-							target="_blank" class="sqs-svg-icon--wrapper facebook">
+						<a href="https://www.facebook.com/makeupStarStudio" target="_blank"
+							class="sqs-svg-icon--wrapper facebook">
 							<div>
 								<svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
 									<use class="sqs-use--icon" xlink:href="#facebook-icon"></use>
