--- a/index.html
+++ b/index.html
@@ -1541,11 +1541,11 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 			  " style="overflow: hidden;">
 
 															<noscript><img
-																	src="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1448919758463-X3Z5MLFYPW5ECMNSI7B0/ke17ZwdGBToddI8pDm48kB95ivddBhs3Y6bCLhXSCzN7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UU72prBGo4541SqOmN2sKhGNtlYAhYtl0QrtIXYAGMeeKecyZ0ZMz4VVYb7syoOhLQ/Kevan+Grace+Wedding-All+Images-0316.jpg"
+																	src="https://www.instagram.com/p/CO7WDstMmmh/"
 																	alt=" OffWhite Makeup &amp;amp; Beauty | www.offwhitebeauty.com | Sarah Bradshaw Photography | Seattle Bride | Seattle Makeup Artist | Airbrush Makeup | Wedding Hair | Pacific Northwest Bride  " /></noscript><img
 																class="thumb-image loaded"
-																data-src="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1448919758463-X3Z5MLFYPW5ECMNSI7B0/ke17ZwdGBToddI8pDm48kB95ivddBhs3Y6bCLhXSCzN7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UU72prBGo4541SqOmN2sKhGNtlYAhYtl0QrtIXYAGMeeKecyZ0ZMz4VVYb7syoOhLQ/Kevan+Grace+Wedding-All+Images-0316.jpg"
-																data-image="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1448919758463-X3Z5MLFYPW5ECMNSI7B0/ke17ZwdGBToddI8pDm48kB95ivddBhs3Y6bCLhXSCzN7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UU72prBGo4541SqOmN2sKhGNtlYAhYtl0QrtIXYAGMeeKecyZ0ZMz4VVYb7syoOhLQ/Kevan+Grace+Wedding-All+Images-0316.jpg"
+																data-src="https://www.instagram.com/p/CO7WDstMmmh/"
+																data-image="https://www.instagram.com/p/CO7WDstMmmh/"
 																data-image-dimensions="2333x3500"
 																data-image-focal-point="0.5,0.5" data-load="false"
 																data-image-id="565cc2cde4b02fbb0a549363"
@@ -1554,10 +1554,9 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 																data-parent-ratio="0.7"
 																alt=" OffWhite Makeup &amp;amp; Beauty | www.offwhitebeauty.com | Sarah Bradshaw Photography | Seattle Bride | Seattle Makeup Artist | Airbrush Makeup | Wedding Hair | Pacific Northwest Bride  "
 																data-image-resolution="750w"
-																src="https://images.squarespace-cdn.com/content/v1/54829d8ee4b05054300c9003/1448919758463-X3Z5MLFYPW5ECMNSI7B0/ke17ZwdGBToddI8pDm48kB95ivddBhs3Y6bCLhXSCzN7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UU72prBGo4541SqOmN2sKhGNtlYAhYtl0QrtIXYAGMeeKecyZ0ZMz4VVYb7syoOhLQ/Kevan+Grace+Wedding-All+Images-0316.jpg?format=750w">
+																src="https://www.instagram.com/p/CO7WDstMmmh/?format=750w">
 														</a>
-
-													</div>
+												</div>
 												</div>
 											<!--dimple bride -->
 												<div class="slide sqs-gallery-design-grid-slide" data-type="image"
@@ -1580,7 +1579,7 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 																data-parent-ratio="0.7"
 																alt=" OffWhite Makeup &amp;amp; Beauty | www.offwhitebeauty.com | Bryce Covey Photography | Seattle Bride | Seattle Makeup Artist | Airbrush Makeup | Wedding Hair | Pacific Northwest Bride  "
 																data-image-resolution="750w"
-																src="https://www.instagram.com/p/CO7WDstMmmh/">
+																src="https://www.instagram.com/p/CO7WDstMmmh/?format=750w">
 														</a>
 													</div>
 												</div>
