--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,7 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 												</div>
 											</div>
 										</div>
-										<style type="text/css" id="design-grid-css">
+										<!-- <style type="text/css" id="design-grid-css">
 											#block-yui_3_17_2_46_1447356062719_9129 .sqs-gallery-block-grid .sqs-gallery-design-grid {
 												margin-right: -15px;
 											}
@@ -1594,7 +1594,7 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 												margin-right: 15px;
 												margin-bottom: 15px;
 											}
-										</style>
+										</style> -->
 									</div>
 								</div>
 								<div class="sqs-block html-block sqs-block-html" data-block-type="2"
@@ -1612,11 +1612,8 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 
 			<div id="footerWrapper">
 				<footer id="footer">
-
-
 					<div id="sqs-social" class="social-links sqs-svg-icon--list"
 						data-content-field="connected-accounts">
-
 						<a href="https://www.instagram.com/makeupstarstudio/" target="_blank"
 							class="sqs-svg-icon--wrapper instagram">
 							<div>
@@ -1626,7 +1623,6 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 								</svg>
 							</div>
 						</a>
-
 						<a href="https://www.facebook.com/makeupStarStudio" target="_blank"
 							class="sqs-svg-icon--wrapper facebook">
 							<div>
@@ -1636,11 +1632,7 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 								</svg>
 							</div>
 						</a>
-
-
 					</div>
-
-
 					<div class="sqs-layout sqs-grid-12 columns-12" data-layout-label="Footer Content"
 						data-type="block-field" data-updated-on="1504221540596" id="footerBlock">
 						<div class="row sqs-row">
@@ -1648,12 +1640,11 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 								<div class="sqs-block html-block sqs-block-html" data-block-type="2"
 									id="block-yui_3_17_2_46_1447356062719_12685">
 									<div class="sqs-block-content">
-										<p class="text-align-center">&nbsp;</p>
-										<p class="text-align-center">&nbsp;</p>
 										<p class="text-align-center">Since 2017 we have been providing on location
 											wedding day bridal hair and airbrush makeup in Seattle and the greater
 											surrounding areas of the Pacific Northwest. Please <a href="/contact">let us
-												know</a> what one of our artist's can do for you!&nbsp;</p>
+												know</a> what one of our artist's can do for you!&nbsp;
+										</p>
 									</div>
 								</div>
 							</div>
@@ -1669,16 +1660,6 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 		data-sqs-type="imageloader-bootstrapper">(function () { if (window.ImageLoader) { window.ImageLoader.bootstrap({}, document); } })();</script>
 	<script>Squarespace.afterBodyLoad(Y);</script><svg xmlns="http://www.w3.org/2000/svg" version="1.1"
 		style="display:none" data-usage="social-icons-svg">
-		<symbol id="pinterest-icon" viewBox="0 0 64 64">
-			<path
-				d="M32,16c-8.8,0-16,7.2-16,16c0,6.6,3.9,12.2,9.6,14.7c0-1.1,0-2.5,0.3-3.7 c0.3-1.3,2.1-8.7,2.1-8.7s-0.5-1-0.5-2.5c0-2.4,1.4-4.1,3.1-4.1c1.5,0,2.2,1.1,2.2,2.4c0,1.5-0.9,3.7-1.4,5.7 c-0.4,1.7,0.9,3.1,2.5,3.1c3,0,5.1-3.9,5.1-8.5c0-3.5-2.4-6.1-6.7-6.1c-4.9,0-7.9,3.6-7.9,7.7c0,1.4,0.4,2.4,1.1,3.1 c0.3,0.3,0.3,0.5,0.2,0.9c-0.1,0.3-0.3,1-0.3,1.3c-0.1,0.4-0.4,0.6-0.8,0.4c-2.2-0.9-3.3-3.4-3.3-6.1c0-4.5,3.8-10,11.4-10 c6.1,0,10.1,4.4,10.1,9.2c0,6.3-3.5,11-8.6,11c-1.7,0-3.4-0.9-3.9-2c0,0-0.9,3.7-1.1,4.4c-0.3,1.2-1,2.5-1.6,3.4 c1.4,0.4,3,0.7,4.5,0.7c8.8,0,16-7.2,16-16C48,23.2,40.8,16,32,16z">
-			</path>
-		</symbol>
-		<symbol id="pinterest-mask" viewBox="0 0 64 64">
-			<path
-				d="M0,0v64h64V0H0z M32,48c-1.6,0-3.1-0.2-4.5-0.7c0.6-1,1.3-2.2,1.6-3.4c0.2-0.7,1.1-4.4,1.1-4.4 c0.6,1.1,2.2,2,3.9,2c5.1,0,8.6-4.7,8.6-11c0-4.7-4-9.2-10.1-9.2c-7.6,0-11.4,5.5-11.4,10c0,2.8,1,5.2,3.3,6.1 c0.4,0.1,0.7,0,0.8-0.4c0.1-0.3,0.2-1,0.3-1.3c0.1-0.4,0.1-0.5-0.2-0.9c-0.6-0.8-1.1-1.7-1.1-3.1c0-4,3-7.7,7.9-7.7 c4.3,0,6.7,2.6,6.7,6.1c0,4.6-2,8.5-5.1,8.5c-1.7,0-2.9-1.4-2.5-3.1c0.5-2,1.4-4.2,1.4-5.7c0-1.3-0.7-2.4-2.2-2.4 c-1.7,0-3.1,1.8-3.1,4.1c0,1.5,0.5,2.5,0.5,2.5s-1.8,7.4-2.1,8.7c-0.3,1.2-0.3,2.6-0.3,3.7C19.9,44.2,16,38.6,16,32 c0-8.8,7.2-16,16-16c8.8,0,16,7.2,16,16C48,40.8,40.8,48,32,48z">
-			</path>
-		</symbol>
 		<symbol id="instagram-icon" viewBox="0 0 64 64">
 			<path
 				d="M46.91,25.816c-0.073-1.597-0.326-2.687-0.697-3.641c-0.383-0.986-0.896-1.823-1.73-2.657c-0.834-0.834-1.67-1.347-2.657-1.73c-0.954-0.371-2.045-0.624-3.641-0.697C36.585,17.017,36.074,17,32,17s-4.585,0.017-6.184,0.09c-1.597,0.073-2.687,0.326-3.641,0.697c-0.986,0.383-1.823,0.896-2.657,1.73c-0.834,0.834-1.347,1.67-1.73,2.657c-0.371,0.954-0.624,2.045-0.697,3.641C17.017,27.415,17,27.926,17,32c0,4.074,0.017,4.585,0.09,6.184c0.073,1.597,0.326,2.687,0.697,3.641c0.383,0.986,0.896,1.823,1.73,2.657c0.834,0.834,1.67,1.347,2.657,1.73c0.954,0.371,2.045,0.624,3.641,0.697C27.415,46.983,27.926,47,32,47s4.585-0.017,6.184-0.09c1.597-0.073,2.687-0.326,3.641-0.697c0.986-0.383,1.823-0.896,2.657-1.73c0.834-0.834,1.347-1.67,1.73-2.657c0.371-0.954,0.624-2.045,0.697-3.641C46.983,36.585,47,36.074,47,32S46.983,27.415,46.91,25.816z M44.21,38.061c-0.067,1.462-0.311,2.257-0.516,2.785c-0.272,0.7-0.597,1.2-1.122,1.725c-0.525,0.525-1.025,0.85-1.725,1.122c-0.529,0.205-1.323,0.45-2.785,0.516c-1.581,0.072-2.056,0.087-6.061,0.087s-4.48-0.015-6.061-0.087c-1.462-0.067-2.257-0.311-2.785-0.516c-0.7-0.272-1.2-0.597-1.725-1.122c-0.525-0.525-0.85-1.025-1.122-1.725c-0.205-0.529-0.45-1.323-0.516-2.785c-0.072-1.582-0.087-2.056-0.087-6.061s0.015-4.48,0.087-6.061c0.067-1.462,0.311-2.257,0.516-2.785c0.272-0.7,0.597-1.2,1.122-1.725c0.525-0.525,1.025-0.85,1.725-1.122c0.529-0.205,1.323-0.45,2.785-0.516c1.582-0.072,2.056-0.087,6.061-0.087s4.48,0.015,6.061,0.087c1.462,0.067,2.257,0.311,2.785,0.516c0.7,0.272,1.2,0.597,1.725,1.122c0.525,0.525,0.85,1.025,1.122,1.725c0.205,0.529,0.45,1.323,0.516,2.785c0.072,1.582,0.087,2.056,0.087,6.061S44.282,36.48,44.21,38.061z M32,24.297c-4.254,0-7.703,3.449-7.703,7.703c0,4.254,3.449,7.703,7.703,7.703c4.254,0,7.703-3.449,7.703-7.703C39.703,27.746,36.254,24.297,32,24.297z M32,37c-2.761,0-5-2.239-5-5c0-2.761,2.239-5,5-5s5,2.239,5,5C37,34.761,34.761,37,32,37z M40.007,22.193c-0.994,0-1.8,0.806-1.8,1.8c0,0.994,0.806,1.8,1.8,1.8c0.994,0,1.8-0.806,1.8-1.8C41.807,22.999,41.001,22.193,40.007,22.193z">
@@ -1702,11 +1683,5 @@ clear" id="yui_3_17_2_1_1619654612203_82">
 	</svg>
 	<script type="text/javascript"
 		src="https://static1.squarespace.com/static/ta/4f6798afe4b097349e410d49/1597/scripts/combo/?site.js"></script>
-
-
-
-
-
 </body>
-
 </html>
