fixed footer message

--- a/index.html
+++ b/index.html
@@ -1397,10 +1397,7 @@ services for brides.">
 								<div class="sqs-block html-block sqs-block-html" data-block-type="2"
 									id="block-yui_3_17_2_46_1447356062719_12685">
 									<div class="sqs-block-content">
-										<p class="text-align-center">Since 2017 we have been providing on location
-											wedding day bridal hair and airbrush makeup in Seattle and the greater
-											surrounding areas of the Pacific Northwest. Please <a href="/contact">let us
-												know</a> what one of our artist's can do for you!&nbsp;
+										<p class="text-align-center">For the past 8 years I have been providing wedding day bridal hair and makeup in the PNW and the surroundings of the Bay Area. Please let me know what I can do for you!
 										</p>
 									</div>
 								</div>
