--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	<script type="text/javascript"
 		src="//use.typekit.net/ik/1i_EMQXW3-mJoD5uCyb-UWxnt_RD5plq20GECGQD-jIfenJffFHN4UJLFRbh52jhWD9X52JoZ2y8ZQsKw293FQbDw2gR5QM3wU7GMPG0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPUydcNcZ1iG-Ws8ShmyiYsCZPoRdhXCdeNRjAUGdaFXOeu8ZhB0OA4TdciGjAXldATlZKoDSWmyScmDSeBRZPoRdhXCiaiaOcB0dhZcihyTiemDZABXieU8OcFzdPUaiaS0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPJwSY4zpe8ljPu0daZyH6qJ73IbMg6gJMJ7fbKzMsMMeMb6MKG4fHXgIMMjgKMfH6qJnMIbMg6OJMJ7fbKOMsMMeMS6MKG4fOMgIMMj2KMfH6qJRMIbMg6sJMHbMiA3GCXB.js"></script>
-	<style type="text/css">
+	<!-- <style type="text/css">
 		@font-face {
 			font-family: proxima-nova;
 			src: url(https://use.typekit.net/af/7a16a7/000000000000000077359568/30/l?subset_id=2&fvd=n1&v=3) format("woff2"), url(https://use.typekit.net/af/7a16a7/000000000000000077359568/30/d?subset_id=2&fvd=n1&v=3) format("woff"), url(https://use.typekit.net/af/7a16a7/000000000000000077359568/30/a?subset_id=2&fvd=n1&v=3) format("opentype");
@@ -63,7 +63,7 @@
 			font-style: italic;
 			font-display: auto;
 		}
-	</style>
+	</style> -->
 	<script type="text/javascript">try { Typekit.load(); } catch (e) { }</script>
 	<script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
 	<script>(function (rollups, name) { if (!rollups[name]) { rollups[name] = {}; } rollups[name].js = ["//assets.squarespace.com/universal/scripts-compressed/moment-js-vendor-26ddeab7fa5f90b6c8cb3-min.en-US.js"]; })(SQUARESPACE_ROLLUPS, 'squarespace-moment_js_vendor');</script>
@@ -1145,7 +1145,7 @@
 								}
 							});
 						</script>
-						
+
 						<div id="navBlock" role="navigation">
 							<nav class="main-nav" data-content-field="navigation">
 								<ul>
