--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			font-display: auto;
 		}
 	</style> -->
-	<script type="text/javascript">try { Typekit.load(); } catch (e) { }</script>
+	<!-- <script type="text/javascript">try { Typekit.load(); } catch (e) { }</script>
 	<script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
 	<script>(function (rollups, name) { if (!rollups[name]) { rollups[name] = {}; } rollups[name].js = ["//assets.squarespace.com/universal/scripts-compressed/moment-js-vendor-26ddeab7fa5f90b6c8cb3-min.en-US.js"]; })(SQUARESPACE_ROLLUPS, 'squarespace-moment_js_vendor');</script>
 	<script crossorigin="anonymous"
@@ -1144,7 +1144,7 @@
 									});
 								}
 							});
-						</script>
+						</script> -->
 
 						<div id="navBlock" role="navigation">
 							<nav class="main-nav" data-content-field="navigation">
