--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	<script>(function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-2301062-1', 'auto'); ga('send', 'pageview');</script>
 	<!-- End of Squarespace Headers -->
 
-	<style type="text/css">
+	<!-- <style type="text/css">
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_save.PIN_1619654612664_above.PIN_1619654612664_padded {
 			margin-top: 28px !important;
@@ -1144,7 +1144,7 @@
 									});
 								}
 							});
-						</script> -->
+						</script> --> -->
 
 						<div id="navBlock" role="navigation">
 							<nav class="main-nav" data-content-field="navigation">
