--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <div id="yui3-css-stamp" style="position: absolute !important; visibility: hidden !important"></div>
 
 <head>
+	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
+	<script type="text/javascript"
+		src="//use.typekit.net/ik/1i_EMQXW3-mJoD5uCyb-UWxnt_RD5plq20GECGQD-jIfenJffFHN4UJLFRbh52jhWD9X52JoZ2y8ZQsKw293FQbDw2gR5QM3wU7GMPG0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPUydcNcZ1iG-Ws8ShmyiYsCZPoRdhXCdeNRjAUGdaFXOeu8ZhB0OA4TdciGjAXldATlZKoDSWmyScmDSeBRZPoRdhXCiaiaOcB0dhZcihyTiemDZABXieU8OcFzdPUaiaS0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPJwSY4zpe8ljPu0daZyH6qJ73IbMg6gJMJ7fbKzMsMMeMb6MKG4fHXgIMMjgKMfH6qJnMIbMg6OJMJ7fbKOMsMMeMS6MKG4fOMgIMMj2KMfH6qJRMIbMg6sJMHbMiA3GCXB.js"></script>
+	
+	
 	<style type="text/css">
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_save.PIN_1619654612664_above.PIN_1619654612664_padded {
