--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-﻿<!-- <html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US"
-	class="yui3-js-enabled js flexbox canvas canvastext webgl no-touch hashchange history draganddrop rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms no-csstransforms3d csstransitions video audio svg inlinesvg svgclippaths wf-proximanova-n4-active wf-proximanova-i1-active wf-proximanova-n1-active wf-proximanova-n6-active wf-proximanova-n7-active wf-proximanova-i4-active wf-proximanova-i7-active wf-active"
-	style=""> -->
+﻿<!DOCTYPE HTML>
+
+<html>
 
 <head>
+	<title></title>Blossom Residence
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<!-- <head>
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	<script type="text/javascript"
 		src="//use.typekit.net/ik/1i_EMQXW3-mJoD5uCyb-UWxnt_RD5plq20GECGQD-jIfenJffFHN4UJLFRbh52jhWD9X52JoZ2y8ZQsKw293FQbDw2gR5QM3wU7GMPG0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPUydcNcZ1iG-Ws8ShmyiYsCZPoRdhXCdeNRjAUGdaFXOeu8ZhB0OA4TdciGjAXldATlZKoDSWmyScmDSeBRZPoRdhXCiaiaOcB0dhZcihyTiemDZABXieU8OcFzdPUaiaS0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPJwSY4zpe8ljPu0daZyH6qJ73IbMg6gJMJ7fbKzMsMMeMb6MKG4fHXgIMMjgKMfH6qJnMIbMg6OJMJ7fbKOMsMMeMS6MKG4fOMgIMMj2KMfH6qJRMIbMg6sJMHbMiA3GCXB.js"></script>
@@ -97,8 +107,7 @@
 		href="https://static1.squarespace.com/static/sitecss/54829d8ee4b05054300c9003/58/4f6a1392e4b07090d46e7ec9/5644f76de4b03240a8efb3bd/1597-05142015/1541707101202/site.css">
 	<script>Static.COOKIE_BANNER_CAPABLE = true;</script>
 	<script>(function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-2301062-1', 'auto'); ga('send', 'pageview');</script>
-	<!-- End of Squarespace Headers -->
-
+	
 	<style type="text/css">
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_save.PIN_1619654612664_above.PIN_1619654612664_padded {
@@ -1107,7 +1116,7 @@
 			display: none !important;
 		}
 	</style>
-</head>
+</head> -->
 
 <body
 	class="underline-body-links blog-meta-data-split  hide-author   social-icon-style-normal  show-products-category-navigation    event-show-past-events event-thumbnails event-thumbnail-size-32-standard event-date-label  event-list-show-cats event-list-date event-list-time event-list-address   event-icalgcal-links  event-excerpts      gallery-design-grid aspect-ratio-auto lightbox-style-light gallery-navigation-circles gallery-info-overlay-show-on-hover gallery-aspect-ratio-32-standard gallery-arrow-style-circular gallery-transitions-fade gallery-show-arrows gallery-auto-crop  gallery-loop product-list-titles-under product-list-alignment-center product-item-size-11-square product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing tweak-v1-related-products-image-aspect-ratio-11-square tweak-v1-related-products-details-alignment-center newsletter-style-dark hide-opentable-icons opentable-style-dark small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-outline button-corner-style-rounded tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-type-page collection-layout-default collection-5492404de4b0f844eaee37f4 homepage mobile-style-available"
