--- a/index.html
+++ b/index.html
@@ -1122,10 +1122,9 @@
 
 						<h1 class="logo image" data-shrink-original-size="21">
 							<a href="/" title="GeetArtistry" role="bookmark" data-content-field="site-title">
-								<span class="placed-logo-image"><img
-				
-										alt="GeetArtistry"></span>
-
+								<span class="placed-logo-image">
+									<img src="//static1.squarespace.com/static/54829d8ee4b05054300c9003/t/5644fa03e4b03240a8efdc80/1600924279180/?format=1500w" alt="GeetArtistry">
+								</span>
 							</a>
 						</h1>
 
