--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
 
 						<h1 class="logo image" data-shrink-original-size="21">
 							<a href="/" title="GeetArtistry" role="bookmark" data-content-field="site-title">
-								<span class="placed-logo-image">
+								<!-- <span class="placed-logo-image"> -->
 									<img src="/images/LOGO.jpg">
 							</a>
 						</h1>
