changed logo image

--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 				<header id="header">
 					<div id="headerInfo">
 						<h1 class="logo image" data-shrink-original-size="21">
-							<img src="/images/LOGO.jpg">
+							<img src="/images/75289356_754686421663125_8850783787135533056_n.jpg">
 						</h1>
 <!-- 
 						<script>
