--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
 			<div id="headerWrapper">
 				<header id="header">
 					<div id="headerInfo">
-						<h1 class="logo image" data-shrink-original-size="21">
+						<h1>
 							<img src="/images/75289356_754686421663125_8850783787135533056_n.jpg">
 						</h1>
 
@@ -1144,13 +1144,13 @@
 										<div class="subnav">
 											<ul>
 												<li class="page-collection">
-													<a href="/bridal">Wedding</a>
+													<a href="/bridal">Hair</a>
 												</li>
 												<li class="page-collection">
-													<a href="/event-beauty">Everything Else</a>
+													<a href="/event-beauty">MakeUp</a>
 												</li>
 												<li class="page-collection">
-													<a href="/airbrush-tanning">Airbrush Tanning</a>
+													<a href="/airbrush-tanning">Henna</a>
 												</li>
 											</ul>
 										</div>
@@ -1174,9 +1174,6 @@
 									<li class="gallery-collection">
 										<a href="/portfolio">Portfolio</a>
 									</li>
-									<li class="blog-collection">
-										<a href="/blog">Blog</a>
-									</li>
 									<li class="page-collection">
 										<a href="/about">About</a>
 									</li>
@@ -1187,9 +1184,9 @@
 								<select id="mobileSelect" name="mobileSelect">
 									<option class="mobile-select-label" value="">Navigation</option>
 									<optgroup label="Services">Services
-										<option class="page-collection" value="/bridal">Wedding</option>
-										<option class="page-collection" value="/event-beauty">Everything Else</option>
-										<option class="page-collection" value="/airbrush-tanning">Airbrush Tanning
+										<option class="page-collection" value="/bridal">Hair</option>
+										<option class="page-collection" value="/event-beauty">Makeup</option>
+										<option class="page-collection" value="/airbrush-tanning">Henna
 										</option>
 									</optgroup>
 									<optgroup label="Pricing">Pricing
@@ -1200,7 +1197,6 @@
 											Tanning</option>
 									</optgroup>
 									<option class="gallery-collection" value="/portfolio">Portfolio</option>
-									<option class="blog-collection" value="/blog">Blog</option>
 									<option class="page-collection" value="/about">About</option>
 									<option class="page-collection" value="/contact">Contact</option>
 								</select>
