header tag id changed

--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,8 @@
 	<div id="site">
 		<div id="canvas">
 			<div id="headerWrapper">
-				<header id="header">
+				<header>
+				<!-- <header id="header"> -->
 					<div id="headerInfo">
 						<h1>
 							<img src="/images/75289356_754686421663125_8850783787135533056_n.jpg">
@@ -1248,7 +1249,6 @@
 					</div>
 				</footer>
 			</div><!-- / footerWrapper -->
-
 		</div><!-- / canvas -->
 	</div><!-- / site -->
 
