headaer div deleted

--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
 			<div id="headerWrapper">
 				<header>
 				<!-- <header id="header"> -->
-					<div id="headerInfo">
+					<!-- <div id="headerInfo"> -->
 						<h1>
 							<img src="/images/75289356_754686421663125_8850783787135533056_n.jpg">
 						</h1>
@@ -1204,7 +1204,7 @@
 							</nav>
 						</div>
 						<!-- CATEGORY NAV -->
-					</div>
+					<!-- </div> -->
 				</header>
 			</div>
 			<div id="footerWrapper">
