--- a/index.html
+++ b/index.html
@@ -1115,8 +1115,7 @@
 	<div id="site">
 		<div id="canvas">
 			<div id="headerWrapper">
-				<header>
-				<!-- <header id="header"> -->
+				<header id="header">
 					<div id="headerInfo">
 						<h1>
 							<img src="/images/75289356_754686421663125_8850783787135533056_n.jpg">
