--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 				<header id="header">
 					<div id="headerInfo">
 						<h1>
-							<img src="/images/75289356_754686421663125_8850783787135533056_n.jpg">
+							<img src="/images/LOGO2.jpg">
 						</h1>
 
 						<script>
