changes to pricing list

--- a/index.html
+++ b/index.html
@@ -1160,13 +1160,16 @@
 										<div class="subnav">
 											<ul>
 												<li class="page-collection">
-													<a href="/wedding-pricing">Wedding</a>
+													<a href="/wedding-pricing">Bridal Makeup and Hair</a>
 												</li>
 												<li class="page-collection">
-													<a href="/special-events-pricing">Everything Else</a>
+													<a href="/special-events-pricing">Makeup</a>
 												</li>
 												<li class="page-collection">
-													<a href="/airbrush-tanning-pricing">Airbrush Tanning</a>
+													<a href="/airbrush-tanning-pricing">Hair</a>
+												</li>
+												<li class="page-collection">
+													<a href="/airbrush-tanning-pricing">Henna</a>
 												</li>
 											</ul>
 										</div>
