--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
 							<img src="/images/LOGO2.jpg">
 						</h1>
 
-						<script>
+						<!-- <script>
 							Y.use('squarespace-ui-base', function (Y) {
 								Y.one("h1.logo").plug(Y.Squarespace.TextShrink, {
 									parentEl: Y.one('#header'),
@@ -1134,7 +1134,7 @@
 									});
 								}
 							});
-						</script>
+						</script> -->
 						
 						<div id="navBlock" role="navigation">
 							<nav class="main-nav" data-content-field="navigation">
@@ -1193,11 +1193,13 @@
 										</option>
 									</optgroup>
 									<optgroup label="Pricing">Pricing
-										<option class="page-collection" value="/wedding-pricing">Wedding</option>
-										<option class="page-collection" value="/special-events-pricing">Everything Else
+										<option class="page-collection" value="/wedding-pricing">Bridal Makeup and Hair</option>
+										<option class="page-collection" value="/special-events-pricing">Makeup
 										</option>
-										<option class="page-collection" value="/airbrush-tanning-pricing">Airbrush
-											Tanning</option>
+										<option class="page-collection" value="/airbrush-tanning-pricing">
+											Hair</option>
+										<option class="page-collection" value="/airbrush-tanning-pricing">
+											Henna</option>
 									</optgroup>
 									<option class="gallery-collection" value="/portfolio">Portfolio</option>
 									<option class="page-collection" value="/about">About</option>
