took off header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 
 <html>
-	
+
 <head>
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	<script type="text/javascript"
@@ -1115,144 +1115,122 @@
 	<div id="site">
 		<div id="canvas">
 			<div id="headerWrapper">
-				<header id="header">
-					<div id="headerInfo">
-						<h1>
-							<img src="/images/LOGO2.jpg">
-						</h1>
-
-						<!-- <script>
-							Y.use('squarespace-ui-base', function (Y) {
-								Y.one("h1.logo").plug(Y.Squarespace.TextShrink, {
-									parentEl: Y.one('#header'),
-									minFontSize: 16
-								});
-								if (Y.one('p.site-tagline')) {
-									Y.one("p.site-tagline").plug(Y.Squarespace.TextShrink, {
-										parentEl: Y.one('#header'),
-										minFontSize: 12
-									});
-								}
-							});
-						</script> -->
-						
-						<div id="navBlock" role="navigation">
-							<nav class="main-nav" data-content-field="navigation">
-								<ul>
-									<li class="folder-collection folder">
-										<a aria-haspopup="true" href="#" onclick="return false;" class="">Services</a>
-										<div class="subnav">
-											<ul>
-												<li class="page-collection">
-													<a href="/bridal">Hair</a>
-												</li>
-												<li class="page-collection">
-													<a href="/event-beauty">MakeUp</a>
-												</li>
-												<li class="page-collection">
-													<a href="/airbrush-tanning">Henna</a>
-												</li>
-											</ul>
-										</div>
-									</li>
-									<li class="folder-collection folder">
-										<a aria-haspopup="true" href="#" onclick="return false;" class="">Pricing</a>
-										<div class="subnav">
-											<ul>
-												<li class="page-collection">
-													<a href="/wedding-pricing">Bridal Makeup and Hair</a>
-												</li>
-												<li class="page-collection">
-													<a href="/special-events-pricing">Makeup</a>
-												</li>
-												<li class="page-collection">
-													<a href="/airbrush-tanning-pricing">Hair</a>
-												</li>
-												<li class="page-collection">
-													<a href="/airbrush-tanning-pricing">Henna</a>
-												</li>
-											</ul>
-										</div>
-									</li>
-									<li class="gallery-collection">
-										<a href="/portfolio">Portfolio</a>
-									</li>
-									<li class="page-collection">
-										<a href="/about">About</a>
-									</li>
-									<li class="page-collection">
-										<a href="/contact">Contact</a>
-									</li>
-								</ul>
-								<select id="mobileSelect" name="mobileSelect">
-									<option class="mobile-select-label" value="">Navigation</option>
-									<optgroup label="Services">Services
-										<option class="page-collection" value="/bridal">Hair</option>
-										<option class="page-collection" value="/event-beauty">Makeup</option>
-										<option class="page-collection" value="/airbrush-tanning">Henna
-										</option>
-									</optgroup>
-									<optgroup label="Pricing">Pricing
-										<option class="page-collection" value="/wedding-pricing">Bridal Makeup and Hair</option>
-										<option class="page-collection" value="/special-events-pricing">Makeup
-										</option>
-										<option class="page-collection" value="/airbrush-tanning-pricing">
-											Hair</option>
-										<option class="page-collection" value="/airbrush-tanning-pricing">
-											Henna</option>
-									</optgroup>
-									<option class="gallery-collection" value="/portfolio">Portfolio</option>
-									<option class="page-collection" value="/about">About</option>
-									<option class="page-collection" value="/contact">Contact</option>
-								</select>
-							</nav>
-						</div>
-						<!-- CATEGORY NAV -->
-					</div>
-				</header>
+				<div id="navBlock" role="navigation">
+					<nav class="main-nav" data-content-field="navigation">
+						<ul>
+							<li class="folder-collection folder">
+								<a aria-haspopup="true" href="#" onclick="return false;" class="">Services</a>
+								<div class="subnav">
+									<ul>
+										<li class="page-collection">
+											<a href="/bridal">Hair</a>
+										</li>
+										<li class="page-collection">
+											<a href="/event-beauty">MakeUp</a>
+										</li>
+										<li class="page-collection">
+											<a href="/airbrush-tanning">Henna</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="folder-collection folder">
+								<a aria-haspopup="true" href="#" onclick="return false;" class="">Pricing</a>
+								<div class="subnav">
+									<ul>
+										<li class="page-collection">
+											<a href="/wedding-pricing">Bridal Makeup and Hair</a>
+										</li>
+										<li class="page-collection">
+											<a href="/special-events-pricing">Makeup</a>
+										</li>
+										<li class="page-collection">
+											<a href="/airbrush-tanning-pricing">Hair</a>
+										</li>
+										<li class="page-collection">
+											<a href="/airbrush-tanning-pricing">Henna</a>
+										</li>
+									</ul>
+								</div>
+							</li>
+							<li class="gallery-collection">
+								<a href="/portfolio">Portfolio</a>
+							</li>
+							<li class="page-collection">
+								<a href="/about">About</a>
+							</li>
+							<li class="page-collection">
+								<a href="/contact">Contact</a>
+							</li>
+						</ul>
+						<select id="mobileSelect" name="mobileSelect">
+							<option class="mobile-select-label" value="">Navigation</option>
+							<optgroup label="Services">Services
+								<option class="page-collection" value="/bridal">Hair</option>
+								<option class="page-collection" value="/event-beauty">Makeup</option>
+								<option class="page-collection" value="/airbrush-tanning">Henna
+								</option>
+							</optgroup>
+							<optgroup label="Pricing">Pricing
+								<option class="page-collection" value="/wedding-pricing">Bridal Makeup and Hair</option>
+								<option class="page-collection" value="/special-events-pricing">Makeup
+								</option>
+								<option class="page-collection" value="/airbrush-tanning-pricing">
+									Hair</option>
+								<option class="page-collection" value="/airbrush-tanning-pricing">
+									Henna</option>
+							</optgroup>
+							<option class="gallery-collection" value="/portfolio">Portfolio</option>
+							<option class="page-collection" value="/about">About</option>
+							<option class="page-collection" value="/contact">Contact</option>
+						</select>
+					</nav>
+				</div>
+				<!-- CATEGORY NAV -->
 			</div>
-			<div id="footerWrapper">
-				<footer id="footer">
-					<div id="sqs-social" class="social-links sqs-svg-icon--list"
-						data-content-field="connected-accounts">
-						<a href="https://www.instagram.com/makeupstarstudio/" target="_blank"
-							class="sqs-svg-icon--wrapper instagram">
-							<div>
-								<svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-									<use class="sqs-use--icon" xlink:href="#instagram-icon"></use>
-									<use class="sqs-use--mask" xlink:href="#instagram-mask"></use>
-								</svg>
-							</div>
-						</a>
-						<a href="https://www.facebook.com/makeupStarStudio" target="_blank"
-							class="sqs-svg-icon--wrapper facebook">
-							<div>
-								<svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-									<use class="sqs-use--icon" xlink:href="#facebook-icon"></use>
-									<use class="sqs-use--mask" xlink:href="#facebook-mask"></use>
-								</svg>
-							</div>
-						</a>
-					</div>
-					<div class="sqs-layout sqs-grid-12 columns-12" data-layout-label="Footer Content"
-						data-type="block-field" data-updated-on="1504221540596" id="footerBlock">
-						<div class="row sqs-row">
-							<div class="col sqs-col-12 span-12">
-								<div class="sqs-block html-block sqs-block-html" data-block-type="2"
-									id="block-yui_3_17_2_46_1447356062719_12685">
-									<div class="sqs-block-content">
-										<p class="text-align-center">
-											<br>
-											<br>
-											For the past 8 years I have been providing wedding day bridal hair and makeup in the PNW and the surroundings of the Bay Area. Please let me know what I can do for you!
-										</p>
-									</div>
+			</header>
+		</div>
+		<div id="footerWrapper">
+			<footer id="footer">
+				<div id="sqs-social" class="social-links sqs-svg-icon--list" data-content-field="connected-accounts">
+					<a href="https://www.instagram.com/makeupstarstudio/" target="_blank"
+						class="sqs-svg-icon--wrapper instagram">
+						<div>
+							<svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
+								<use class="sqs-use--icon" xlink:href="#instagram-icon"></use>
+								<use class="sqs-use--mask" xlink:href="#instagram-mask"></use>
+							</svg>
+						</div>
+					</a>
+					<a href="https://www.facebook.com/makeupStarStudio" target="_blank"
+						class="sqs-svg-icon--wrapper facebook">
+						<div>
+							<svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
+								<use class="sqs-use--icon" xlink:href="#facebook-icon"></use>
+								<use class="sqs-use--mask" xlink:href="#facebook-mask"></use>
+							</svg>
+						</div>
+					</a>
+				</div>
+				<div class="sqs-layout sqs-grid-12 columns-12" data-layout-label="Footer Content"
+					data-type="block-field" data-updated-on="1504221540596" id="footerBlock">
+					<div class="row sqs-row">
+						<div class="col sqs-col-12 span-12">
+							<div class="sqs-block html-block sqs-block-html" data-block-type="2"
+								id="block-yui_3_17_2_46_1447356062719_12685">
+								<div class="sqs-block-content">
+									<p class="text-align-center">
+										<br>
+										<br>
+										For the past 8 years I have been providing wedding day bridal hair and makeup in
+										the PNW and the surroundings of the Bay Area. Please let me know what I can do
+										for you!
+									</p>
 								</div>
 							</div>
 						</div>
 					</div>
-				</footer>
-			</div><!-- / footerWrapper -->
+				</div><!-- / footerWrapper -->
 		</div><!-- / canvas -->
 	</div><!-- / site -->
 
@@ -1284,4 +1262,5 @@
 	<script type="text/javascript"
 		src="https://static1.squarespace.com/static/ta/4f6798afe4b097349e410d49/1597/scripts/combo/?site.js"></script>
 </body>
+
 </html>
