--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
 		<!--Logo-->
 		<br>
 		<br>
-		<img src="/images/LOGO2.jpg" alt="LOGO2">
+		<img src="/images/LOGO2.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
 		<br>
 		<br>
 		<!-- Footer -->
