logo not working

--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
 		<!--Logo-->
 		<br>
 		<br>
-		<img src="/images/LOGO2.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+		<img src="https://th.bing.com/th/id/R152945e4381232d68bea35272a6758a1?rik=STpQ%2fLvTqUbR0A&riu=http%3a%2f%2fimg-cdn.herbeauty.co%2fwp-content%2fuploads%2f2015%2f07%2fSmokey-Eye-Makeup-To-Look-Great-Day-And-Night.jpg&ehk=4YEH66hcScctbjI7k5vG1t9qTC1ojnb3HAzTMkw%2f%2fh4%3d&risl=&pid=ImgRaw" style="width:128px;height:128px;">
 		<br>
 		<br>
 		<!-- Footer -->
