used url link for logo

--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
 		<!--Logo-->
 		<br>
 		<br>
-		<img src="https://th.bing.com/th/id/R152945e4381232d68bea35272a6758a1?rik=STpQ%2fLvTqUbR0A&riu=http%3a%2f%2fimg-cdn.herbeauty.co%2fwp-content%2fuploads%2f2015%2f07%2fSmokey-Eye-Makeup-To-Look-Great-Day-And-Night.jpg&ehk=4YEH66hcScctbjI7k5vG1t9qTC1ojnb3HAzTMkw%2f%2fh4%3d&risl=&pid=ImgRaw" style="width:128px;height:128px;">
+		<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/68751558_2708673906026343_810667792855465984_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=cSyzzwYyFkAAX9yMWSp&_nc_ht=scontent-sea1-1.xx&oh=65148b4fa14f9758e71c664507beb82d&oe=60D3FFF6">
 		<br>
 		<br>
 		<!-- Footer -->
