--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,10 @@
 		.PIN_1619654612664_hidden {
 			display: none !important;
 		}
+
+		.aligncenter {
+    text-align: center}
+
 	</style>
 </head>
 <body
@@ -1113,11 +1117,11 @@
 			<div id="headerWrapper">
 					<!--Logo-->
 		<header>
+			<p class="aligncenter">
 			<br>
+			<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/68751558_2708673906026343_810667792855465984_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=cSyzzwYyFkAAX9yMWSp&_nc_ht=scontent-sea1-1.xx&oh=65148b4fa14f9758e71c664507beb82d&oe=60D3FFF6" style="float:center;width:82px;height:82px;">
 			<br>
-			<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/68751558_2708673906026343_810667792855465984_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=cSyzzwYyFkAAX9yMWSp&_nc_ht=scontent-sea1-1.xx&oh=65148b4fa14f9758e71c664507beb82d&oe=60D3FFF6" style="float:center;width:42px;height:42px;">
-			<br>
-			<br>
+			</p>
 		</header>
 			<!-- CATEGORY NAV -->
 				<div id="navBlock" role="navigation">
