--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
 		<header>
 			<p class="aligncenter">
 			<br>
-			<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/68751558_2708673906026343_810667792855465984_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=cSyzzwYyFkAAX9yMWSp&_nc_ht=scontent-sea1-1.xx&oh=65148b4fa14f9758e71c664507beb82d&oe=60D3FFF6" style="float:center;width:82px;height:82px;">
+			<img src="https://i.etsystatic.com/9677300/r/il/bb4435/870970602/il_1588xN.870970602_30we.jpg" style="float:center;width:82px;height:82px;">
 			<br>
 			</p>
 		</header>
@@ -1197,6 +1197,7 @@
 				</div>
 			</div>
 		</div>
+		<br>
 		<!-- Footer -->
 		<div id="footerWrapper">
 			<footer id="footer">
