--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		}
 
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_white {
-			background-color: #fff !important;
+			background-color: rgb(5, 0, 0) !important;
 		}
 
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_save {
