--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 	<script>Static.COOKIE_BANNER_CAPABLE = true;</script>
 	<script>(function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-2301062-1', 'auto'); ga('send', 'pageview');</script>
 
-	<style type="text/css">
+	<style type="text/css">  
+
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_save.PIN_1619654612664_above.PIN_1619654612664_padded {
 			margin-top: 28px !important;
@@ -1110,8 +1111,9 @@
 	</style>
 </head>
 <body
+
 	class="underline-body-links blog-meta-data-split  hide-author   social-icon-style-normal  show-products-category-navigation    event-show-past-events event-thumbnails event-thumbnail-size-32-standard event-date-label  event-list-show-cats event-list-date event-list-time event-list-address   event-icalgcal-links  event-excerpts      gallery-design-grid aspect-ratio-auto lightbox-style-light gallery-navigation-circles gallery-info-overlay-show-on-hover gallery-aspect-ratio-32-standard gallery-arrow-style-circular gallery-transitions-fade gallery-show-arrows gallery-auto-crop  gallery-loop product-list-titles-under product-list-alignment-center product-item-size-11-square product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing tweak-v1-related-products-image-aspect-ratio-11-square tweak-v1-related-products-details-alignment-center newsletter-style-dark hide-opentable-icons opentable-style-dark small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-outline button-corner-style-rounded tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-type-page collection-layout-default collection-5492404de4b0f844eaee37f4 homepage mobile-style-available"
-	id="collection-5492404de4b0f844eaee37f4" data-pin-hover="true">
+	id="collection-5492404de4b0f844eaee37f4" data-pin-hover="true" style="background-color:black;"></body>>
 	<div id="site">
 		<div id="canvas">
 			<div id="headerWrapper">
@@ -1119,7 +1121,7 @@
 		<header>
 			<p class="aligncenter">
 			<br>
-			<img src="https://i.etsystatic.com/9677300/r/il/bb4435/870970602/il_1588xN.870970602_30we.jpg" style="float:center;width:200px;height:200px;">
+			<img src="https://i.etsystatic.com/9677300/r/il/bb4435/870970602/il_1588xN.870970602_30we.jpg" style="float:center;width:400px;height:400px;">
 			<br>
 			</p>
 		</header>
