navbar background color

--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
 			</p>
 		</header>
 			<!-- CATEGORY NAV -->
-				<div id="navBlock" role="navigation">
+				<div id="navBlock" role="navigation" style="background-color: blanchedalmond;">
 					<nav class="main-nav" data-content-field="navigation">
 						<ul>
 							<li class="folder-collection folder">
