--- a/hair.html
+++ b/hair.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
@@ -1200,49 +1200,6 @@
 			</div>
 		</div>
 		<br>
-		<!-- Footer -->
-		<div id="footerWrapper">
-			<footer id="footer">
-				<div id="sqs-social" class="social-links sqs-svg-icon--list" data-content-field="connected-accounts">
-					<a href="https://www.instagram.com/makeupstarstudio/" target="_blank"
-						class="sqs-svg-icon--wrapper instagram">
-						<div>
-							<svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-								<use class="sqs-use--icon" xlink:href="#instagram-icon"></use>
-								<use class="sqs-use--mask" xlink:href="#instagram-mask"></use>
-							</svg>
-						</div>
-					</a>
-					<a href="https://www.facebook.com/makeupStarStudio" target="_blank"
-						class="sqs-svg-icon--wrapper facebook">
-						<div>
-							<svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-								<use class="sqs-use--icon" xlink:href="#facebook-icon"></use>
-								<use class="sqs-use--mask" xlink:href="#facebook-mask"></use>
-							</svg>
-						</div>
-					</a>
-				</div>
-				<div class="sqs-layout sqs-grid-12 columns-12" data-layout-label="Footer Content"
-					data-type="block-field" data-updated-on="1504221540596" id="footerBlock">
-					<div class="row sqs-row">
-						<div class="col sqs-col-12 span-12">
-							<div class="sqs-block html-block sqs-block-html" data-block-type="2"
-								id="block-yui_3_17_2_46_1447356062719_12685">
-								<div class="sqs-block-content">
-									<p class="text-align-center">
-										<br>
-										<br>
-										For the past 8 years I have been providing wedding day bridal hair and makeup in
-										the PNW and the surroundings of the Bay Area. Please let me know what I can do
-										for you!
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div><!-- / footerWrapper -->
-		</div><!-- / canvas -->
 	</div><!-- / site -->
 
 	<script type="text/javascript"
