--- a/hair.html
+++ b/hair.html
@@ -1177,9 +1177,9 @@
 						<select id="mobileSelect" name="mobileSelect">
 							<option class="mobile-select-label" value="">Navigation</option>
 							<optgroup label="Services">Services
-								<option class="page-collection" value="/bridal">Hair</option>
-								<option class="page-collection" value="/event-beauty">Makeup</option>
-								<option class="page-collection" value="/airbrush-tanning">Henna
+								<option class="page-collection" value="/hair.html">Hair</option>
+								<option class="page-collection" value="/makeup.html">Makeup</option>
+								<option class="page-collection" value="/henna.html">Henna
 								</option>
 							</optgroup>
 							<optgroup label="Pricing">Pricing
@@ -1200,6 +1200,7 @@
 			</div>
 		</div>
 		<br>
+
 	</div><!-- / site -->
 
 	<script type="text/javascript"
