--- a/index.html
+++ b/index.html
@@ -1133,16 +1133,41 @@
 								<div class="subnav">
 									<ul>
 										<li class="page-collection">
-											<a href="/hair.html">Hair</a>
+											<a href="#hair">Hair</a>
 										</li>
 										<li class="page-collection">
-											<a href="/makeup.html">MakeUp</a>
+											<a href="#makeup">MakeUp</a>
 										</li>
 										<li class="page-collection">
-											<a href="/henna.html">Henna</a>
+											<a href="#henna">Henna</a>
 										</li>
 									</ul>
 								</div>
+							</li>
+							<article id="hair">
+								<div id="navBlock" role="navigation" style="background-color: blanchedalmond;">
+									<nav class="main-nav" data-content-field="navigation">
+										<ul>
+											<li class="folder-collection folder">
+												<a aria-haspopup="true" href="#" onclick="return false;" class="">Services</a>
+												<div class="subnav">
+													<ul>
+														<li class="page-collection">
+															<a href="#hair">Hair</a>
+														</li>
+														<li class="page-collection">
+															<a href="#makeup">MakeUp</a>
+														</li>
+														<li class="page-collection">
+															<a href="#henna">Henna</a>
+														</li>
+													</ul>
+												</div>
+											</li>
+										</ul>	
+									</nav>
+								</div>		
+							</article>
 							</li>
 							<li class="folder-collection folder">
 								<a aria-haspopup="true" href="#" onclick="return false;" class="">Pricing</a>
