testing navbar properties

--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
 								<a href="/contact">Contact</a>
 							</li>
 						</ul>
-						<select id="mobileSelect" name="mobileSelect">
+						<!-- <select id="mobileSelect" name="mobileSelect">
 							<option class="mobile-select-label" value="">Navigation</option>
 							<optgroup label="Services">Services
 								<option class="page-collection" value="/Hair.html">Hair</option>
@@ -1192,8 +1192,8 @@
 							</optgroup>
 							<option class="gallery-collection" value="/portfolio">Portfolio</option>
 							<option class="page-collection" value="/about">About</option>
-							<option class="page-collection" value="/contact">Contact</option>
-						</select>
+							<option class="page-collection" value="/contact">Contact</option> -->
+						<!-- </select> -->
 					</nav>
 				</div>
 			</div>
