--- a/index.html
+++ b/index.html
@@ -1133,13 +1133,13 @@
 								<div class="subnav">
 									<ul>
 										<li class="page-collection">
-											<a href="#hair">Hair</a>
+											<a href="/hair">Hair</a>
 										</li>
 										<li class="page-collection">
-											<a href="#makeup">MakeUp</a>
+											<a href="/makeup">MakeUp</a>
 										</li>
 										<li class="page-collection">
-											<a href="#henna">Henna</a>
+											<a href="/henna">Henna</a>
 										</li>
 									</ul>
 								</div>
