--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<script type="text/javascript"
 		src="//use.typekit.net/ik/1i_EMQXW3-mJoD5uCyb-UWxnt_RD5plq20GECGQD-jIfenJffFHN4UJLFRbh52jhWD9X52JoZ2y8ZQsKw293FQbDw2gR5QM3wU7GMPG0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPUydcNcZ1iG-Ws8ShmyiYsCZPoRdhXCdeNRjAUGdaFXOeu8ZhB0OA4TdciGjAXldATlZKoDSWmyScmDSeBRZPoRdhXCiaiaOcB0dhZcihyTiemDZABXieU8OcFzdPUaiaS0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPJwSY4zpe8ljPu0daZyH6qJ73IbMg6gJMJ7fbKzMsMMeMb6MKG4fHXgIMMjgKMfH6qJnMIbMg6OJMJ7fbKOMsMMeMS6MKG4fOMgIMMj2KMfH6qJRMIbMg6sJMHbMiA3GCXB.js"></script>
 	<style type="text/css">
-		@font-face {
+		/* @font-face {
 			font-family: proxima-nova;
 			src: url(https://use.typekit.net/af/7a16a7/000000000000000077359568/30/l?subset_id=2&fvd=n1&v=3) format("woff2"), url(https://use.typekit.net/af/7a16a7/000000000000000077359568/30/d?subset_id=2&fvd=n1&v=3) format("woff"), url(https://use.typekit.net/af/7a16a7/000000000000000077359568/30/a?subset_id=2&fvd=n1&v=3) format("opentype");
 			font-weight: 100;
 			font-style: normal;
 			font-display: auto;
-		}
+		} */
 
 		@font-face {
 			font-family: proxima-nova;
