--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<!-- <script async="" src="https://www.google-analytics.com/analytics.js"></script> -->
-	<script type="text/javascript"
+	<!-- <script type="text/javascript"
 		src="//use.typekit.net/ik/1i_EMQXW3-mJoD5uCyb-UWxnt_RD5plq20GECGQD-jIfenJffFHN4UJLFRbh52jhWD9X52JoZ2y8ZQsKw293FQbDw2gR5QM3wU7GMPG0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPUydcNcZ1iG-Ws8ShmyiYsCZPoRdhXCdeNRjAUGdaFXOeu8ZhB0OA4TdciGjAXldATlZKoDSWmyScmDSeBRZPoRdhXCiaiaOcB0dhZcihyTiemDZABXieU8OcFzdPUaiaS0dAm1jAtljc80ZhyydPul-cucO1FUiABkZWF3jAF8OcFzdPJwSY4zpe8ljPu0daZyH6qJ73IbMg6gJMJ7fbKzMsMMeMb6MKG4fHXgIMMjgKMfH6qJnMIbMg6OJMJ7fbKOMsMMeMS6MKG4fOMgIMMj2KMfH6qJRMIbMg6sJMHbMiA3GCXB.js"></script>
 	<style type="text/css">
-	</style>
+	</style> -->
 	<script type="text/javascript">try { Typekit.load(); } catch (e) { }</script>
 	<script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
 	<script>(function (rollups, name) { if (!rollups[name]) { rollups[name] = {}; } rollups[name].js = ["//assets.squarespace.com/universal/scripts-compressed/moment-js-vendor-26ddeab7fa5f90b6c8cb3-min.en-US.js"]; })(SQUARESPACE_ROLLUPS, 'squarespace-moment_js_vendor');</script>
