--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 			vertical-align: baseline !important;
 		} */
 
-		/* a.PIN_1619654612664_button_pin:hover {
+		a.PIN_1619654612664_button_pin:hover {
 			box-shadow: inset 0 0 1px #000 !important;
-		} */
+		}
 
+/* position of the logo */
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above .PIN_1619654612664_count {
 			position: absolute !important;
 			top: -28px !important;
