--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			margin-top: 28px !important;
 		} */
 
-		/* a.PIN_1619654612664_button_pin {
+		a.PIN_1619654612664_button_pin {
 			cursor: pointer !important;
 			display: inline-block !important;
 			box-shadow: inset 0 0 1px #888 !important;
@@ -24,11 +24,11 @@
 			box-sizing: border-box !important;
 			text-align: center !important;
 			vertical-align: baseline !important;
-		} */
-
-		a.PIN_1619654612664_button_pin:hover {
-			box-shadow: inset 0 0 1px #000 !important;
 		}
+
+		/* a.PIN_1619654612664_button_pin:hover {
+			box-shadow: inset 0 0 1px #000 !important;
+		} */
 
 /* position of the logo */
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above .PIN_1619654612664_count {
