--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<style type="text/css">  
-/* 
+
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_save.PIN_1619654612664_above.PIN_1619654612664_padded {
 			margin-top: 28px !important;
-		} */
+		}
 
-		a.PIN_1619654612664_button_pin {
+		/* a.PIN_1619654612664_button_pin {
 			cursor: pointer !important;
 			display: inline-block !important;
 			box-shadow: inset 0 0 1px #888 !important;
@@ -24,7 +24,7 @@
 			box-sizing: border-box !important;
 			text-align: center !important;
 			vertical-align: baseline !important;
-		}
+		} */
 
 		/* a.PIN_1619654612664_button_pin:hover {
 			box-shadow: inset 0 0 1px #000 !important;
