--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 	<style type="text/css">  
 
-		/* a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
+	/* position of navbar */
+
+		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_save.PIN_1619654612664_above.PIN_1619654612664_padded {
 			margin-top: 28px !important;
 		} */
 
-		a.PIN_1619654612664_button_pin {
+		 a.PIN_1619654612664_button_pin {
 			cursor: pointer !important;
 			display: inline-block !important;
 			box-shadow: inset 0 0 1px #888 !important;
@@ -26,9 +28,9 @@
 			vertical-align: baseline !important;
 		}
 
-		/* a.PIN_1619654612664_button_pin:hover {
+		a.PIN_1619654612664_button_pin:hover {
 			box-shadow: inset 0 0 1px #000 !important;
-		} */
+		}
 
 /* position of the logo */
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above .PIN_1619654612664_count {
