--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css"
 		href="https://static1.squarespace.com/static/sitecss/54829d8ee4b05054300c9003/58/4f6a1392e4b07090d46e7ec9/5644f76de4b03240a8efb3bd/1597-05142015/1541707101202/site.css">
 	<script>Static.COOKIE_BANNER_CAPABLE = true;</script>
-	<!-- <script>(function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-2301062-1', 'auto'); ga('send', 'pageview');</script> -->
+	<script>(function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-2301062-1', 'auto'); ga('send', 'pageview');</script>
 
 	<style type="text/css">
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
