--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script
 		type="application/ld+json">{"url":"https://anoffwhiteseattle.com","name":"OffWhite Makeup and Beauty","description":"","image":"//static1.squarespace.com/static/54829d8ee4b05054300c9003/t/5644fa03e4b03240a8efdc80/1600924279180/","@context":"http://schema.org","@type":"WebSite"}</script>
 	<!-- <script
-		type="application/ld+json">{"legalName":"OffWhite Makeup & Beauty","address":"7305 Linden Avenue North\nSeattle, WA, 98103","email":"anoffwhiteseattle@gmail.com","telephone":"206-491-5941","sameAs":["http://pinterest.com/offwhitebeauty","http://instagram.com/offwhitemakeupandbeauty","https://www.facebook.com/OffWhite-Beauty-Boutique-177543998964854/?ref=hl"],"@context":"http://schema.org","@type":"Organization"}</script>
+		type="application/ld+json">{"legalName":"OffWhite Makeup & Beauty","address":"7305 Linden Avenue North\nSeattle, WA, 98103","email":"anoffwhiteseattle@gmail.com","telephone":"206-491-5941","sameAs":["http://pinterest.com/offwhitebeauty","http://instagram.com/offwhitemakeupandbeauty","https://www.facebook.com/OffWhite-Beauty-Boutique-177543998964854/?ref=hl"],"@context":"http://schema.org","@type":"Organization"}</script> -->
 	<script
 		type="application/ld+json">{"address":"7305 Linden Avenue North\nSeattle, WA, 98103\nUnited States","image":"https://static1.squarespace.com/static/54829d8ee4b05054300c9003/t/5644fa03e4b03240a8efdc80/1600924279180/","name":"OffWhite Makeup & Beauty","openingHours":"Mo 08:00-19:00, Tu 08:00-19:00, We 08:00-19:00, Th 08:00-19:00, Fr 08:00-19:00, Sa 08:00-19:00, Su 08:00-19:00","@context":"http://schema.org","@type":"LocalBusiness"}</script> -->
 	<link rel="stylesheet" type="text/css"
