align logo in center

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	id="collection-5492404de4b0f844eaee37f4" data-pin-hover="true" style="background-color:black;">
 	<div id="site">
 		<div id="canvas">
-			<div id="headerWrapper">
+			<div id="headerWrapper" class="aligncenter">
 				<!--Logo-->
 				<header>
 					<p class="aligncenter">
