--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 	
 		<script type="text/javascript"> SquarespaceFonts.loadViaContext(); Squarespace.load(window);</script>
 
-	<link rel="stylesheet" type="text/css"
-		href="https://static1.squarespace.com/static/sitecss/54829d8ee4b05054300c9003/58/4f6a1392e4b07090d46e7ec9/5644f76de4b03240a8efb3bd/1597-05142015/1541707101202/site.css">
-
-	<!-- <script>Static.COOKIE_BANNER_CAPABLE = true;</script> -->
+	<link rel="stylesheet" type="text/css">
+		<!-- href="https://static1.squarespace.com/static/sitecss/54829d8ee4b05054300c9003/58/4f6a1392e4b07090d46e7ec9/5644f76de4b03240a8efb3bd/1597-05142015/1541707101202/site.css"> -->
 
 	<style type="text/css">
 		a.PIN_1619654612664_button_pin.PIN_1619654612664_above.PIN_1619654612664_padded,
