--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
 
 <head>
 	<title>Geet's Artistry</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript>
-			<link rel="stylesheet" href="assets/css/noscript.css" />
-		</noscript>
 
-	<!-- <script type="text/javascript"> SquarespaceFonts.loadViaContext(); Squarespace.load(window);</script>
+	<script type="text/javascript"> SquarespaceFonts.loadViaContext(); Squarespace.load(window);</script>
 
 	<link rel="stylesheet" type="text/css"
 		href="https://static1.squarespace.com/static/sitecss/54829d8ee4b05054300c9003/58/4f6a1392e4b07090d46e7ec9/5644f76de4b03240a8efb3bd/1597-05142015/1541707101202/site.css">
@@ -78,7 +72,7 @@
 
 		.aligncenter {
 			text-align: center
-		} -->
+		}
 	</style>
 </head>
 
