added images to main page

--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
 			</div>
 		</div>
 		<br>
+		<li>
+		<img src="/images/74602087_750992022032565_764344680782495744_n.jpg">
+		<img src="images/75022602_757555004709600_942784800811384832_n.jpg">
+		<img src="images/75289356_754686421663125_8850783787135533056_n.jpg">
+		</li>
+		<br>
 		<!-- Footer -->
 		<div id="footerWrapper">
 			<footer id="footer">
