--- a/index.html
+++ b/index.html
@@ -168,11 +168,19 @@
 			</div>
 		</div>
 		<br>
-		<li>
-		<img src="/images/74602087_750992022032565_764344680782495744_n.jpg">
-		<img src="images/75022602_757555004709600_942784800811384832_n.jpg">
-		<img src="images/75289356_754686421663125_8850783787135533056_n.jpg">
-		</li>
+		<div class="w3-row" style="text-align:center">
+		::before
+			<div class="w3-col m4"
+				style="background-image:url('/images/74602087_750992022032565_764344680782495744_n.jpg');background-size:cover;height:300px;">
+			</div>
+			<div class="w3-col m4"
+				style="background-image:url('images/75022602_757555004709600_942784800811384832_n.jpg');background-size:cover;height:300px;">
+			</div>
+			<div class="w3-col m4"
+				style="background-image:url('images/75289356_754686421663125_8850783787135533056_n.jpg');background-size:cover;height:300px;">
+			</div>
+		::after
+		</div>
 		<br>
 		<!-- Footer -->
 		<div id="footerWrapper">
