--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
 		</div>
 		<br>
 		<div class="w3-row" style="text-align:center">
-			<div class="w3-col m4"
-				src="/images/74602087_750992022032565_764344680782495744_n.jpg" ;img-size:300px;height:300px;>
+			<div class="w3-col m4">
+				<img src="/images/74602087_750992022032565_764344680782495744_n.jpg" ;img-size:300px;height:300px;>
 			</div>
-			<div class="w3-col m4"
-				src="/images/74602087_750992022032565_764344680782495744_n.jpg" ;img-size:300px;height:300px;>
+			<div class="w3-col m4">
+				<img src="/images/74602087_750992022032565_764344680782495744_n.jpg" ;img-size:300px;height:300px;>
 			</div>
-			<div class="w3-col m4"
-				src="/images/74602087_750992022032565_764344680782495744_n.jpg" ;img-size:300px;height:300px;>
+			<div class="w3-col m4">
+				<img src="/images/74602087_750992022032565_764344680782495744_n.jpg" ;img-size:300px;height:300px;>
 			</div>
 		</div>
 		<br>
