head tag viewport changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
 	<title>Geet's Artistry</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 
 	<script type="text/javascript"> SquarespaceFonts.loadViaContext(); Squarespace.load(window);</script>
 
